--- a/VehicleLicenceApplication/src/main/resources/application.properties
+++ b/VehicleLicenceApplication/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 
+spring.datasource.username=postgres
+spring.datasource.password=Kumar@2204
+
+spring.jpa.hibernate.ddl-auto=update
