--- a/VehicleLicenseApplication/src/main/resources/application.properties
+++ b/VehicleLicenseApplication/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 
 spring.datasource.username=postgres
-spring.datasource.password=Kumar@2204
+spring.datasource.password=12345abi
 
 spring.jpa.hibernate.ddl-auto=update
