--- a/VehicleLicenseApplication/src/main/resources/application.properties
+++ b/VehicleLicenseApplication/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/postgres
 
-spring.datasource.username=postgres
-spring.datasource.password=12345abi
 
+# Below are the details of database
+# make sure you change them if you are using database other than Postgresql
+
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost/postgres
+
+spring.datasource.username= postgres
+spring.datasource.password = $Atwika1.
+
+
+#create is default for the below property
 spring.jpa.hibernate.ddl-auto=update
+
+
+
