--- a/VehicleLicenseApplication/src/main/resources/application.properties
+++ b/VehicleLicenseApplication/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 # Below are the details of database
-# make sure you change them if you are using database other than Postgresql
+# make sure to change, if using database other than Postgresql
 
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost/postgres
